--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -26,6 +26,7 @@
       <input class="form-control me-2" type="search" placeholder="Поиск..." aria-label="Search" name="q">
       <button class="btn btn-outline-success" type="submit">Искать</button>
     </form>
+      <a href="{% url 'create' %}" class="btn btn-outline-success">Добавить рецепт</a>
 
   </div>
 </nav>
